# Hough-Circle-Detector

./: .editorconfig  .gitignore  CMakeLists.txt  README.markdown  README.md  report
data/: 240-eye0.csv  360-eye0.csv  480-eye0.csv  600-eye0.csv  720-eye0.csv  840-eye0.csv  960-eye0.csv
gpu/: Makefile  batch.sh  hcd.o6019737  main  main.cu
images/: credit.markdown
measure/: avg  comparison.gp  generate.py  speedup.gp
measure/data/: eye0.csv  eye1.csv  eye2.csv
optimized/: CMakeLists.txt  hcd.cpp  hcd.h
original/: CMakeLists.txt  hcd.cpp  main.cpp
parallel/: CMakeLists.txt  hcd.cpp  hcd.h
presentation/: Makefile  bibtexdoc.bib  main-gnuplottex-fig1.gnuplot  main.tex
presentation/res/: cache-friendly-data-structure.xcf  hough-accumulator2D-midpoint-circle-memory-access-pattern.xcf  hough-accumulator2D-padding.xcf  hough-accumulator2D-vote.xcf
scales/: credit.txt
src/: CMakeLists.txt  hcd.cpp
